# WARDRESS

./: .dockerignore  .env.example  .gitattributes  .gitignore  PROGRESS.md  README.md  WARDRESS_AUDIT_REPORT.md  WARDRESS_FINAL_PARANOID_AUDIT_PROMPT.md  WARDRESS_MASTER_PROMPT.md  docker-compose.yml
.github/workflows/: ci.yml  deploy-landing.yml  static.yml
backend/: Dockerfile.app  Dockerfile.worker  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0a6bd482fe1f_auth_add_session_started_at_for_.py  76f6f5dcf922_phase_1_users_refresh_tokens_sites_.py  a7c2e9f31d55_agent_conversations_messages_pending_.py  b41c7a9e2d05_phase_2_scan_findings_risk_score_site_.py  d7e3a1c40f88_phase_3_suppression_rules.py  e9a2b7c15f04_phase_4_notifications_alerts_settings.py  f3c8d6a91b27_phase_5_audit_api_keys_remediation.py
backend/app/: __init__.py  alerting.py  apikeys.py  audit.py  config.py  crypto.py  db.py  deps.py  explain.py  llm.py  main.py  models.py  ratelimit.py  remediation.py  reporting.py  scanning.py  schemas.py  security.py  seed_admin.py  settings_store.py  ssrf.py  ssrf_transport.py  tasks.py
backend/app/agent/: __init__.py  context.py  engine.py  guard.py  tools.py
backend/app/routers/: agent.py  alerts.py  apikeys.py  artifacts.py  audit.py  auth.py  health.py  imports.py  remediation.py  reports.py  settings.py  sites.py  users.py
backend/app/templates/email/: alert.html  test.html
backend/app/templates/report/: report.html
backend/tests/: conftest.py  test_agent.py  test_artifacts.py  test_auth.py  test_detection_fusion_pipeline.py  test_detection_layers.py  test_hashing.py  test_main.py  test_phase4_alerting.py  test_phase4_api.py  test_phase4_scan_integration.py  test_phase5_audit.py  test_phase5_bulk_import.py  test_phase5_health.py  test_phase5_ratelimit_ssrf.py  test_phase5_rbac.py  test_phase5_remediation.py  test_phase5_users_apikeys.py  test_probe.py  test_scan_tasks.py  test_scheduler.py  test_security.py  test_sites.py  test_sites_phase2.py  test_sites_phase3.py  test_smoke.py  test_ssrf.py  test_suppression.py
backend/worker/: __init__.py  alert_tasks.py  artifacts.py  beat_tasks.py  celery_app.py  db.py  fetcher.py  hashing.py  llm_escalation.py  probe.py  remediation_tasks.py  scan_tasks.py  telegram_bot.py  telegram_stub.py
backend/worker/detection/: __init__.py  cloaking.py  dom.py  fusion.py  metadata.py  pipeline.py  semantics.py  signatures.py  suppress.py  types.py  visual.py
docs/: agent.mdx  api-reference.mdx  audit-logs.mdx  configuration.mdx  detection-layers.mdx  docs.json  installation.mdx  introduction.mdx  remediation-hooks.mdx  security-and-dev.mdx  styles.css  usage.mdx  user-management.mdx
docs/frontend/: architecture.mdx  components.mdx  (+1 more)
frontend/: index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
landing/: README.md  app.js  index.html  styles.css
scripts/: install.ps1  lib.ps1  uninstall.ps1  update.ps1
walkthrough/: index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
(+71 files in other folders)
